fix: workspace metadata z-index and scrolling

--- a/Frontend/src/app/modules/workspace/metadata/metadata.component.scss
+++ b/Frontend/src/app/modules/workspace/metadata/metadata.component.scss
@@ -10,9 +10,14 @@ $side:20px;
   margin:auto;
 }
 .close{
-  padding-right:$side;
+  position: absolute;
+  right: $side;
   padding-top:$top;
-  float:right;
+}
+.main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .mimetype{
   word-break: break-all;
@@ -31,6 +36,8 @@ $side:20px;
   padding-top:0;
   background-color: $workspaceMetadataBackground;
   margin-bottom: 0;
+  margin-left: unset;
+  margin-right: unset;
 }
 .row .col{
   padding:0;
@@ -77,14 +84,14 @@ $side:20px;
   color:$textLight;
   float:right;
   position: relative;
-  top: -10px;
 }
 .btnVersion{
   margin-right: 5px;
 }
 .content{
-  margin-top:20px;
   padding:0 12px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .value{
   padding-top:0;
@@ -147,10 +154,10 @@ listTable{
 }
 .preview{
   width:calc(100% + 24px);
-  margin-left:-13px;
+  margin-left:-12px;
+  margin-bottom: 12px;
   height:200px;
   position: relative;
-  top:-20px;
   object-fit: cover;
 }
 .license{
